--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
+    "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.1",
+    "react-promise-tracker": "^2.1.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.0.4",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.8.3"
   },
