--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-tab-view": "^2.15.1",
+    "react-native-youtube": "^2.0.1",
     "react-promise-tracker": "^2.1.0",
     "styled-components": "^5.1.1"
   },
