--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/segmented-control": "^2.1.1",
     "@react-native-firebase/app": "^8.4.1",
     "@react-native-firebase/database": "^7.5.5",
     "@react-navigation/native": "^5.7.3",
