--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.4.1",
@@ -30,6 +31,9 @@
     "react-native-tab-view": "^2.15.1",
     "react-native-youtube": "^2.0.1",
     "react-promise-tracker": "^2.1.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
@@ -40,7 +44,10 @@
     "@types/react-native": "^0.63.2",
     "@types/react-native-snap-carousel": "^3.8.2",
     "@types/react-native-svg-charts": "^5.0.3",
+    "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/redux": "^3.6.0",
+    "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
