--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
+    "luxon": "^1.25.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
@@ -42,6 +43,7 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
+    "@types/luxon": "^1.24.4",
     "@types/react-native": "^0.63.2",
     "@types/react-native-snap-carousel": "^3.8.2",
     "@types/react-native-svg-charts": "^5.0.3",
