--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "luxon": "^1.25.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-inappbrowser-reborn": "^3.4.0",
     "react-native-reanimated": "^1.13.0",
@@ -46,6 +47,7 @@
     "@types/jest": "^25.2.3",
     "@types/luxon": "^1.24.4",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-actionsheet": "^2.4.1",
     "@types/react-native-snap-carousel": "^3.8.2",
     "@types/react-native-svg-charts": "^5.0.3",
     "@types/react-redux": "^7.1.9",
