--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
+    "lottie-ios": "3.1.8",
+    "lottie-react-native": "^3.5.0",
     "luxon": "^1.25.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
